--- a/vue2x/wxlogin/index.html
+++ b/vue2x/wxlogin/index.html
@@ -46,7 +46,7 @@
           <ul>
             {{each img as val idx}}
             <li>
-              <a href="//m.yhd.com/">
+              <a href="javascript:;">
                 <img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAYAAAAfFcSJAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8YQUAAAAJcEhZcwAADsQAAA7EAZUrDhsAAAANSURBVBhXYzh8+PB/AAffA0nNPuCLAAAAAElFTkSuQmCC" data-src={{val.img}} alt="">
                 </a>
             </li>
