--- a/oss/index.html
+++ b/oss/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>oss后台</title>
-    <link href="http://cdn.bootcss.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet" type="text/css" crossorigin="anonymous">
+    <link href="http://file.yunxingzh.com/js/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://unpkg.com/element-ui/lib/theme-default/index.css">
   </head>
   <body>
