--- a/vue2x/wxlogin/index.html
+++ b/vue2x/wxlogin/index.html
@@ -226,11 +226,11 @@
       <iframe src="http://captive.apple.com/" frameborder="0" height="0" width="0"></iframe>
     </script>
   </body>
-  <script type="text/javascript" src="./src/js/zepto.min.js"></script>
+  <script type="text/javascript" src="./src/js/jquery.min.js"></script>
   <script type="text/javascript" src="./src/js/template.js"></script>
   <script type="text/javascript" src="./src/js/wechatutil.js" ></script>
   <script type="text/javascript" src="./src/js/md5.js"></script>
   <script type="text/javascript" src="./src/js/cgi.js"></script>
+  <!--script type="text/javascript" src="./src/js/swipelide.js"></script-->
   <script type="text/javascript" src="./src/js/index.js"></script>
-  <script type="text/javascript" src="./src/js/swipelide.js"></script>
 </html>
