--- a/vue2x/wxlogin/index.html
+++ b/vue2x/wxlogin/index.html
@@ -61,7 +61,7 @@
           </div>
         {{/if}}
         <div class="oneclick-bottom">
-          <button class="btn wx-btn btn-disable">点击或等待<span id="btn-login"></span></button>
+          <button class="btn wx-btn btn-disable">等待<span id="btn-login">(5)</span>秒即可连WiFi</button>
           <span class="oneclick-bottom-text">服务热线：0769-21660569</span>
         </div>
       </div>
@@ -78,7 +78,7 @@
         </div>
         {{/each}}
         <div class="oneclick-bottom">
-          <button class="btn wx-btn min5-btn">微信连WiFi<span id="btn-login"></span></button>
+          <button class="btn wx-btn min5-btn"><img class="btn-img-wechat" src="images/ico_wechat.png">微信连WiFi<span id="btn-login"></span></button>
           <span class="oneclick-bottom-text">服务热线：0769-21660569</span>
         </div>
       </div>
@@ -134,7 +134,7 @@
           </div>
         {{/if}}
         <div class="oneclick-bottom">
-          <button class="btn wx-btn tb-btn btn-disable"><img class="btn-img-wechat" src="images/ico_wechat.png">点击或等待<span id="btn-login"></span></button>
+          <button class="btn wx-btn tb-btn btn-disable">等待<span id="btn-login">(5)</span>秒即可连WiFi</button>
           <span class="oneclick-bottom-text">服务热线：0769-21660569</span>
         </div>
       </div>
@@ -153,7 +153,7 @@
         {{/each}}
       {{/if}}
         <div class="oneclick-bottom">
-          <button class="btn wx-btn tb-btn min5-btn"><img class="btn-img-wechat" src="images/ico_wechat.png">淘宝连WiFi<span id="btn-login"></span></button>
+          <button class="btn wx-btn tb-btn min5-btn">淘宝连WiFi<span id="btn-login"></span></button>
           <span class="oneclick-bottom-text">服务热线：0769-21660569</span>
         </div>
       </div>
@@ -231,6 +231,6 @@
   <script type="text/javascript" src="./src/js/wechatutil.js" ></script>
   <script type="text/javascript" src="./src/js/md5.js"></script>
   <script type="text/javascript" src="./src/js/cgi.js"></script>
-  <!--script type="text/javascript" src="./src/js/swipelide.js"></script-->
+  <script type="text/javascript" src="./src/js/swipelide.js"></script>
   <script type="text/javascript" src="./src/js/index.js"></script>
 </html>
