--- a/dgfree/map.html
+++ b/dgfree/map.html
@@ -54,70 +54,68 @@
   /*map.centerAndZoom(new BMap.Point(116.404, 39.915), 11);  // 初始化地图,设置中心点坐标和地图级别
   map.addControl(new BMap.MapTypeControl());   //添加地图类型控件
   map.setCurrentCity("北京");          // 设置地图显示的城市 此项是必须设置的*/
-  //map.enableScrollWheelZoom(true);     //开启鼠标滚轮缩放
+  map.enableScrollWheelZoom(true);     //开启鼠标滚轮缩放//
   var longitude = 0.0;
   var latitude = 0.0;
   var apSet;
   mapShow();
   function mapShow() {
     apSet = new Set();
+    longitude = 113.90387023396529;
+    latitude = 22.93310386339828;
+    point = new BMap.Point(longitude, latitude);
+    //标注
+    /*map.centerAndZoom(point,15);
+    var myIcon = new BMap.Icon("./static/target.png", new BMap.Size(60,60));
+    var marker = new BMap.Marker(point,{icon:myIcon});  // 创建标注
+    map.addOverlay(marker)*/
+    //控件
+    map.addControl(new BMap.NavigationControl());
+    map.addControl(new BMap.OverviewMapControl());
 
-      longitude = 113.90387023396529;
-      latitude = 22.93310386339828;
-      point = new BMap.Point(longitude, latitude);
-      //标注
-      /*map.centerAndZoom(point,15);
-      var myIcon = new BMap.Icon("./static/target.png", new BMap.Size(60,60));
-      var marker = new BMap.Marker(point,{icon:myIcon});  // 创建标注
-      map.addOverlay(marker)*/
-      //控件
-      map.addControl(new BMap.NavigationControl());
-      map.addControl(new BMap.OverviewMapControl());
-
-      getApAddress(longitude, latitude);
+    getApAddress(longitude, latitude);
 
     }
-      function  getApAddress(){
-         var param = {
-          uid:137,
-          token:'6ba9ac5a422d4473b337d57376dd3488'
+    function  getApAddress(){
+       var param = {
+        uid:137,
+        token:'6ba9ac5a422d4473b337d57376dd3488'
+      }
+      CGI.post('get_all_aps',param,(resp)=>{
+        if (resp.errno === 0) {
+          addlonglat(resp.data.infos);
         }
-        CGI.post('get_all_aps',param,(resp)=>{
-          if (resp.errno === 0) {
-            addlonglat(resp.data.infos);
-          }
-        })
-      }
-      //获取覆盖物位置
-      function attribute(e){
-        var p = e.target;
-        var adsL = apAddress[p.selIdx];
-        var pointB = new BMap.Point(adsL.longitude,adsL.latitude);
-        var distance  = map.getDistance(point, pointB).toFixed(2);
-        //_this.tipBox('位置:'+adsL.address,distance);
-      };
+      })
+    }
+    //获取覆盖物位置
+    function attribute(e){
+      var p = e.target;
+      var adsL = apAddress[p.selIdx];
+      var pointB = new BMap.Point(adsL.longitude,adsL.latitude);
+      var distance  = map.getDistance(point, pointB).toFixed(2);
+      //_this.tipBox('位置:'+adsL.address,distance);
+    };
 
-      function addlonglat(infos) {
-        var key;
-        infos.forEach((item)=>{
-          key = item.longitude + ',' + item.latitude;
-          if (!apSet.has(key)) {
-            apSet.add(key);
-            apAddress.push(item);
-            addMarker(item.longitude, item.latitude, apAddress.length - 1);
-          }
-        })
-      };
+    function addlonglat(infos) {
+      var key;
+      infos.forEach((item)=>{
+        key = item.longitude + ',' + item.latitude;
+        if (!apSet.has(key)) {
+          apSet.add(key);
+          apAddress.push(item);
+          addMarker(item.longitude, item.latitude, apAddress.length - 1);
+        }
+      })
+    };
 
-      function addMarker(lng,lat,idx) {
-        //alert(lng+','+lat+','+idx);
-        var spot = new BMap.Point(lng, lat);
-        var myIcon2 = new BMap.Icon("./images/marker.png", new BMap.Size(31,50));
-        var marker2 = new BMap.Marker(spot,{icon:myIcon2});
-        map.addOverlay(marker2);
-        marker2.addEventListener("click",attribute);
-        marker2.selIdx = idx;
-      }
+    function addMarker(lng,lat,idx) {
+      //alert(lng+','+lat+','+idx);
+      var spot = new BMap.Point(lng, lat);
+      var myIcon2 = new BMap.Icon("./images/marker.png", new BMap.Size(46,47));
+      var marker2 = new BMap.Marker(spot,{icon:myIcon2});
+      map.addOverlay(marker2);
+      marker2.selIdx = idx;
+    }
 </script>
 </body>
 </html>
