--- a/dgfree/map.html
+++ b/dgfree/map.html
@@ -49,13 +49,29 @@
   <script type="text/javascript" src="http://api.map.baidu.com/getscript?v=2.0&ak=BiR1G4yZybhnXDTDHLYq8WXMPaK7owWm"></script>
 </body>
 <script type="text/javascript">
-  var apAddress = [];
+  var map = new BMap.Map("allmap");
+    var point = new BMap.Point(116.404, 39.915);
+    map.centerAndZoom(point, 15);
+    
+    var json_data = [[116.404,39.915],[116.383752,39.91334],[116.384502,39.932241]];
+    var pointArray = new Array();
+    for(var i=0;i<json_data.length;i++){
+      var marker = new BMap.Marker(new BMap.Point(json_data[i][0], json_data[i][1])); // 创建点
+      map.addOverlay(marker);    //增加点
+      pointArray[i] = new BMap.Point(json_data[i][0], json_data[i][1]);
+      marker.addEventListener("click",attribute);
+    }
+    //让所有点在视野范围内
+    map.setViewport(pointArray);
+    //获取覆盖物位置
+    function attribute(e){
+      var p = e.target;
+      alert("marker的位置是" + p.getPosition().lng + "," + p.getPosition().lat);    
+    }
+  /*var apAddress = [];
   // 百度地图API功能
   var map = new BMap.Map("allmap");    // 创建Map实例
-  /*map.centerAndZoom(new BMap.Point(116.404, 39.915), 11);  // 初始化地图,设置中心点坐标和地图级别
-  map.addControl(new BMap.MapTypeControl());   //添加地图类型控件
-  map.setCurrentCity("北京");          // 设置地图显示的城市 此项是必须设置的*/
-  map.enableScrollWheelZoom(true);     //开启鼠标滚轮缩放//
+
   var longitude = 0.0;
   var latitude = 0.0;
   var apSet;
@@ -65,15 +81,9 @@
     longitude = 113.90387023396529;
     latitude = 22.93310386339828;
     point = new BMap.Point(longitude, latitude);
-    //标注
-    /*map.centerAndZoom(point,15);
-    var myIcon = new BMap.Icon("./static/target.png", new BMap.Size(60,60));
-    var marker = new BMap.Marker(point,{icon:myIcon});  // 创建标注
-    map.addOverlay(marker)*/
-    //控件
     map.addControl(new BMap.NavigationControl());
     map.addControl(new BMap.OverviewMapControl());
-
+    map.enableScrollWheelZoom(true);     //开启鼠标滚轮缩放//
     getApAddress(longitude, latitude);
 
     }
@@ -94,7 +104,6 @@
       var adsL = apAddress[p.selIdx];
       var pointB = new BMap.Point(adsL.longitude,adsL.latitude);
       var distance  = map.getDistance(point, pointB).toFixed(2);
-      //_this.tipBox('位置:'+adsL.address,distance);
     };
 
     function addlonglat(infos) {
@@ -115,6 +124,6 @@
       var marker2 = new BMap.Marker(spot,{icon:myIcon2});
       map.addOverlay(marker2);
       marker2.selIdx = idx;
-    }
+    }*/
 </script>
 </html>
