--- a/dgfree/map.html
+++ b/dgfree/map.html
@@ -49,11 +49,13 @@
   <script type="text/javascript" src="http://api.map.baidu.com/getscript?v=2.0&ak=BiR1G4yZybhnXDTDHLYq8WXMPaK7owWm"></script>
 </body>
 <script type="text/javascript">
+  var apAddress = [];
+  var apset = new set();
+
   var map = new BMap.Map("allmap");
     var point = new BMap.Point(113.90387023396529, 22.93310386339828);
     map.centerAndZoom(point, 15);
     
-    var json_data = [];
     var param = {
       uid:137,
       token:'6ba9ac5a422d4473b337d57376dd3488'
@@ -61,72 +63,19 @@
     CGI.post('get_all_aps',param,(resp)=>{
       if (resp.errno === 0) {
         if (resp.data.infos.length>0){
-          json_data = resp.data.infos;
+          addlonglat(resp.data.infos);
         }
       }
     })
-    var pointArray = new Array();
-    for(var i=0;i<json_data.length;i++){
-      var marker = new BMap.Marker(new BMap.Point(json_data[i][0], json_data[i][1])); // 创建点
-      map.addOverlay(marker);    //增加点
-      pointArray[i] = new BMap.Point(json_data[i][0], json_data[i][1]);
-    }
-  /*var apAddress = [];
-  // 百度地图API功能
-  var map = new BMap.Map("allmap");    // 创建Map实例
-
-  var longitude = 0.0;
-  var latitude = 0.0;
-  var apSet;
-  mapShow();
-  function mapShow() {
-    apSet = new Set();
-    longitude = 113.90387023396529;
-    latitude = 22.93310386339828;
-    point = new BMap.Point(longitude, latitude);
-    map.addControl(new BMap.NavigationControl());
-    map.addControl(new BMap.OverviewMapControl());
-    map.enableScrollWheelZoom(true);     //开启鼠标滚轮缩放//
-    getApAddress(longitude, latitude);
-
-    }
-    function  getApAddress(){
-       var param = {
-        uid:137,
-        token:'6ba9ac5a422d4473b337d57376dd3488'
+  function addlonglat(infos) {
+    var myIcon = new BMap.Icon("./images/marker.png", new BMap.Size(46,47));
+    infos.forEach((item)=>{
+      if (item.longitude && item.latitude) {
+        var spot = new BMap.Point(lng, lat);
+        var marker = new BMap.Marker(spot,{icon:myIcon});
+        map.addOverlay(marker2);
       }
-      CGI.post('get_all_aps',param,(resp)=>{
-        if (resp.errno === 0) {
-          addlonglat(resp.data.infos);
-        }
-      })
-    }
-    //获取覆盖物位置
-    function attribute(e){
-      var p = e.target;
-      var adsL = apAddress[p.selIdx];
-      var pointB = new BMap.Point(adsL.longitude,adsL.latitude);
-      var distance  = map.getDistance(point, pointB).toFixed(2);
-    };
-
-    function addlonglat(infos) {
-      var key;
-      infos.forEach((item)=>{
-        key = item.longitude + ',' + item.latitude;
-        if (!apSet.has(key)) {
-          apSet.add(key);
-          apAddress.push(item);
-          addMarker(item.longitude, item.latitude, apAddress.length - 1);
-        }
-      })
-    };
-
-    function addMarker(lng,lat,idx) {
-      var spot = new BMap.Point(lng, lat);
-      var myIcon2 = new BMap.Icon("./images/marker.png", new BMap.Size(46,47));
-      var marker2 = new BMap.Marker(spot,{icon:myIcon2});
-      map.addOverlay(marker2);
-      marker2.selIdx = idx;
-    }*/
+    })
+  };
 </script>
 </html>
