--- a/dgfree/map.html
+++ b/dgfree/map.html
@@ -19,7 +19,10 @@
   </div>
   <div class="content-main">
     <div class="map-main" id="allmap">
-      
+      <div class="map-enlarge" id="enlarge">
+        <img class="enlarge-icon-normal" src="images/enlarge.png">
+        <img class="enlarge-icon-hover" src="images/ico_enlarge_white.png">
+      </div>
     </div>
   </div>
   <div class="footer">
@@ -54,7 +57,7 @@
 
   var map = new BMap.Map("allmap");
     var point = new BMap.Point(113.90387023396529, 22.93310386339828);
-    map.centerAndZoom(point, 15);
+    map.centerAndZoom(point, 13);
     
     var param = {
       uid:137,
@@ -77,5 +80,8 @@
       }
     })
   };
+  $('#enlarge').click(function() {
+    $('#allmap').css({'width': '100%','height':'100%','position':'fixed','top':0,'left':0})
+  })
 </script>
 </html>
