--- a/dgfree/about.html
+++ b/dgfree/about.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>首页</title>
+  <title>关于我们</title>
   <link rel="stylesheet" type="text/css" href="css/reset.css">
   <link rel="stylesheet" type="text/css" href="css/about.css">
 </head>
@@ -14,7 +14,7 @@
       <li class="nav-list-item nav-list-cur g-fl"><a href="javascript:;">关于我们</a></li>
       <li class="nav-list-item g-fl"><a href="map.html">地图热点</a></li>
       <li class="nav-list-item g-fl"><a href="case.html">案例热点</a></li>
-      <li class="nav-list-item g-fl"><a href="app.html">下载App</a></li>
+      <li class="nav-list-item g-fl"><a color="coleff" href="app.html">下载App</a></li>
     </ul>
   </div>
   <div class="content-main">
