--- a/dgfree/map.html
+++ b/dgfree/map.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>首页</title>
+  <title>地图热点</title>
   <link rel="stylesheet" type="text/css" href="css/reset.css">
   <link rel="stylesheet" type="text/css" href="css/map.css">
 </head>
