--- a/dgfree/index.html
+++ b/dgfree/index.html
@@ -106,7 +106,8 @@
       <span class="return-top">返回顶部</span>
     </li>
     <li>
-      <img class="fix-tool-icon" src="images/ico_wechat_gray.png">
+      <img class="fix-tool-icon wechat-normal" src="images/ico_wechat_gray.png">
+      <img class="hover-wechat2" src="images/ico_wechat_white.png" alt="">
       <img class="hover-wechat" src="http://img.yunxingzh.com/f107aa9c-8ebe-43ac-ac40-4a6dec706890.png">
     </li>
     <li>
