--- a/dgfree/app.html
+++ b/dgfree/app.html
@@ -25,7 +25,7 @@
         <dl class="g-clearfix download-info">
           <dt class="g-fl app-download">
             <a href="javascript:;">苹果用户</a>
-            <a href="javascript:;">安卓用户</a>
+            <a class="app-download-android" href="javascript:;">安卓用户</a>
           </dt>
           <dd class="g-fr">
             <img src="http://img.yunxingzh.com/ae094601-3ff4-4977-9cec-d901e4270967.png">
