--- a/dgfree/app.html
+++ b/dgfree/app.html
@@ -19,7 +19,7 @@
   </div>
   <div class="content-main">
     <img class="main-bg" src="http://img.yunxingzh.com/7d2e1c5d-92c2-410c-86be-d72ac0c29497.png">
-    <div class="main-inner-text app-inner-text g-clearfix">
+    <div class="main-inner-text g-clearfix">
       <div class="g-fl">
         <p class="app-tit">东莞人专属的免费上网神器</p>
         <dl class="g-clearfix download-info">
@@ -96,5 +96,21 @@
       </dd>
     </dl>
   </div>
+  <ul class="fixed-tool">
+    <li class="scroll-top" id="toTop">
+      <img class="fix-tool-icon fix-tool-top" src="images/ico_top_gray.png">
+      <span class="return-top">返回顶部</span>
+    </li>
+    <li>
+      <img class="fix-tool-icon wechat-normal" src="images/ico_wechat_gray.png">
+      <img class="hover-wechat2" src="images/ico_wechat_white.png" alt="">
+      <img class="hover-wechat" src="http://img.yunxingzh.com/f107aa9c-8ebe-43ac-ac40-4a6dec706890.png">
+    </li>
+    <li>
+      反馈
+      <img class="hover-phone" src="http://img.yunxingzh.com/8b432f5e-6814-43dc-bc33-8513d868d192.png">
+    </li>
+  </ul>
+  <script type="text/javascript" src="js/totop.js"></script>
 </body>
 </html>
