--- a/dgfree/case.html
+++ b/dgfree/case.html
@@ -84,5 +84,21 @@
       </dd>
     </dl>
   </div>
+  <ul class="fixed-tool">
+    <li class="scroll-top" id="toTop">
+      <img class="fix-tool-icon fix-tool-top" src="images/ico_top_gray.png">
+      <span class="return-top">返回顶部</span>
+    </li>
+    <li>
+      <img class="fix-tool-icon wechat-normal" src="images/ico_wechat_gray.png">
+      <img class="hover-wechat2" src="images/ico_wechat_white.png" alt="">
+      <img class="hover-wechat" src="http://img.yunxingzh.com/f107aa9c-8ebe-43ac-ac40-4a6dec706890.png">
+    </li>
+    <li>
+      反馈
+      <img class="hover-phone" src="http://img.yunxingzh.com/8b432f5e-6814-43dc-bc33-8513d868d192.png">
+    </li>
+  </ul>
+  <script type="text/javascript" src="js/totop.js"></script>
 </body>
 </html>
