--- a/dgfree/map.html
+++ b/dgfree/map.html
@@ -47,6 +47,21 @@
       </dd>
     </dl>
   </div>
+  <ul class="fixed-tool">
+    <li class="scroll-top" id="toTop">
+      <img class="fix-tool-icon fix-tool-top" src="images/ico_top_gray.png">
+      <span class="return-top">返回顶部</span>
+    </li>
+    <li>
+      <img class="fix-tool-icon wechat-normal" src="images/ico_wechat_gray.png">
+      <img class="hover-wechat2" src="images/ico_wechat_white.png" alt="">
+      <img class="hover-wechat" src="http://img.yunxingzh.com/f107aa9c-8ebe-43ac-ac40-4a6dec706890.png">
+    </li>
+    <li>
+      反馈
+      <img class="hover-phone" src="http://img.yunxingzh.com/8b432f5e-6814-43dc-bc33-8513d868d192.png">
+    </li>
+  </ul>
   <script type="text/javascript" src="js/jquery.min.js"></script> 
   <script type="text/javascript" src="js/cgi.js"></script>
   <script type="text/javascript" src="http://api.map.baidu.com/getscript?v=2.0&ak=BiR1G4yZybhnXDTDHLYq8WXMPaK7owWm"></script>
@@ -87,5 +102,18 @@
       $('#allmap').css({'position':'fixed'});
     }
   })
+  var screenHeight = window.screen.availHeight;
+  window.onscroll = function(){ 
+    var t = document.documentElement.scrollTop || document.body.scrollTop; 
+    var top_div = document.getElementById( "toTop" ); 
+    if( t >= 200 ) { 
+        top_div.style.display = "block"; 
+        top_div.onclick = function() {
+          document.getElementById('nav').scrollIntoView();
+        }
+    } else { 
+        top_div.style.display = "none"; 
+    } 
+  }
 </script>
 </html>
