--- a/dgfree/case.html
+++ b/dgfree/case.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" type="text/css" href="css/case.css">
 </head>
 <body>
-  <div class="content-nav">
+  <div class="content-nav"  id="nav">
     <img class="nav-logo" src="http://img.yunxingzh.com/f591c988-4b5f-49a5-8f7a-7fbc469f23a9.png">
     <ul class="nav-list g-clearfix">
       <li class="nav-list-item g-fl "><a href="index.html">首页</a></li>
