--- a/dgfree/index.html
+++ b/dgfree/index.html
@@ -7,9 +7,9 @@
   <link rel="stylesheet" type="text/css" href="css/index.css">
 </head>
 <body>
-  <div class="content-nav" id="nav">
-    <img class="nav-logo" src="http://img.yunxingzh.com/f591c988-4b5f-49a5-8f7a-7fbc469f23a9.png">
-    <ul class="nav-list g-clearfix">
+  <div class="content-nav g-clearfix" id="nav">
+    <img class="nav-logo g-fl" src="http://img.yunxingzh.com/f591c988-4b5f-49a5-8f7a-7fbc469f23a9.png">
+    <ul class="nav-list g-fr g-clearfix">
       <li class="nav-list-item nav-list-cur g-fl "><a href="javascript:;">首页</a></li>
       <li class="nav-list-item g-fl"><a href="about.html">关于我们</a></li>
       <li class="nav-list-item g-fl"><a href="map.html">地图热点</a></li>
