--- a/dgfree/about.html
+++ b/dgfree/about.html
@@ -7,9 +7,9 @@
   <link rel="stylesheet" type="text/css" href="css/about.css">
 </head>
 <body>
-  <div class="content-nav"  id="nav">
-    <img class="nav-logo" src="http://img.yunxingzh.com/f591c988-4b5f-49a5-8f7a-7fbc469f23a9.png">
-    <ul class="nav-list g-clearfix">
+  <div class="content-nav g-clearfix"  id="nav">
+    <img class="nav-logo g-fl" src="images/logo_top.png">
+    <ul class="nav-list g-fr g-clearfix">
       <li class="nav-list-item g-fl "><a href="index.html">首页</a></li>
       <li class="nav-list-item nav-list-cur g-fl"><a href="javascript:;">关于我们</a></li>
       <li class="nav-list-item g-fl"><a href="map.html">地图热点</a></li>
@@ -28,7 +28,8 @@
     <img class="main-bg" src="http://img.yunxingzh.com/83422f8e-f963-49de-baee-ec72589c5d21.png">
     <dl class="main2-inner g-clearfix">
       <dt class="g-fl main2-inner-left">
-        <h2 class="main2-inner-tit">无限<span>项目描述</span></h2>
+        <h2 class="main2-inner-tit">东莞无限</h2>
+        <p class="main2-inner-desc">项目描述</p>
         <ul class="main2-inner-list">
           <li>建设速度快，规模大</li>
           <li>网速快</li>
