--- a/dgfree/index.html
+++ b/dgfree/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div class="content-nav g-clearfix" id="nav">
-    <img class="nav-logo g-fl" src="http://img.yunxingzh.com/f591c988-4b5f-49a5-8f7a-7fbc469f23a9.png">
+    <img class="nav-logo g-fl" src="images/logo_top.png">
     <ul class="nav-list g-fr g-clearfix">
       <li class="nav-list-item nav-list-cur g-fl "><a href="javascript:;">首页</a></li>
       <li class="nav-list-item g-fl"><a href="about.html">关于我们</a></li>
@@ -31,7 +31,7 @@
     <ul class="g-clearfix main-inner">
       <li class="g-fl">
         <img src="http://img.yunxingzh.com/141f0285-f16b-4040-a328-461a7fe813ad.png">
-        <p class="main-inner-text1">网速快</p>
+        <p class="main-inner-text1">极速上网</p>
         <p class="main-inner-text2">刷资讯、视频、游戏，畅通无阻</p>
       </li>
       <li class="g-fl">
@@ -80,10 +80,10 @@
   </div>
   <div class="footer">
     <dl class="footer-inner g-clearfix">
-      <dt class="g-fl">
+      <dt class="g-fl footer-inner-left">
         <div class="footer-logo">
           <img src="http://img.yunxingzh.com/284355b0-0c86-4571-95e3-5c550e81ae44.png">
-          <span class="footer-logo-text">— — 东莞人专属的免费上网神器</span>
+          <span class="footer-logo-text">东莞人专属的免费上网神器</span>
         </div>
         <p class="footer-contact">服务热线：0769-21660569 广告招商：0755-86700641</p>
         <p class="footer-contact">广告招商：0755-86700641 CopyRight © 2016 粤ICP备16105742</p>
