--- a/dgfree/app.html
+++ b/dgfree/app.html
@@ -24,8 +24,8 @@
         <p class="app-tit">东莞人专属的免费上网神器</p>
         <dl class="g-clearfix download-info">
           <dt class="g-fl app-download">
-            <a href="javascript:;">苹果用户</a>
-            <a class="app-download-android" href="javascript:;">安卓用户</a>
+            <a href="http://a.app.qq.com/o/simple.jsp?pkgname=com.yunxingzh.wireless" target="_blank">苹果用户</a>
+            <a class="app-download-android" href="http://a.app.qq.com/o/simple.jsp?pkgname=com.yunxingzh.wireless" target="_blank">安卓用户</a>
           </dt>
           <dd class="g-fr">
             <img src="http://img.yunxingzh.com/ae094601-3ff4-4977-9cec-d901e4270967.png">
@@ -66,7 +66,7 @@
     <div class="app-main3-text g-clearfix">
       <div class="g-fl">
         <p class="app-main2-tit app-main3-tit">300+场所</p>
-        <p class="app-main2-desc g-tar">全程覆盖</p>
+        <p class="app-main2-desc g-tar">全城覆盖</p>
         <a class="g-fr app-main3-btn g-tac" href="map.html">查看详细位置</a>
       </div>
       <div class="g-fr">
