--- a/dgfree/about.html
+++ b/dgfree/about.html
@@ -50,8 +50,8 @@
           <img src="http://img.yunxingzh.com/284355b0-0c86-4571-95e3-5c550e81ae44.png">
           <span class="footer-logo-text">东莞人专属的免费上网神器</span>
         </div>
-        <p class="footer-contact">服务热线：0769-21660569 广告招商：0755-86700641</p>
-        <p class="footer-contact">广告招商：0755-86700641 CopyRight © 2016 粤ICP备16105742</p>
+        <p class="footer-contact">服务热线：0769-26622881 广告招商：17727968106</p>
+        <p class="footer-contact">广告招商：17727968106 CopyRight © 2016 粤ICP备16105742</p>
       </dt>
       <dd class="g-fr contact-code">
         <div class="g-fl wechat-code">
